--- a/art.html
+++ b/art.html
@@ -237,14 +237,17 @@
       <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
         <img src="CBA5.jpg" alt="Art 2">
       </div>
-      <div class="art-tile" data-title="Placeholder 1" data-artist="Artist Name">
-        <img src="Placeholder Image 1.png" alt="Art 3">
+      <div class="art-tile" data-title="NM Art" data-artist="Artist Name">
+        <img src="NM Art.png" alt="Art 3">
       </div>
-      <div class="art-tile" data-title="Placeholder 3" data-artist="Artist Name">
-        <img src="Placeholder Image 3.png" alt="Art 5">
+      <div class="art-tile" data-title="Marathon Art 2" data-artist="Artist Name">
+        <img src="Marathon Art 2.png" alt="Art 5">
       </div>
-      <div class="art-tile" data-title="Placeholder 6" data-artist="Artist Name">
-        <img src="Placeholder Image 6.png" alt="Art 8">
+      <div class="art-tile" data-title="Marathon Art 3" data-artist="Artist Name">
+        <img src="Marathon Art 3.png" alt="Art 8">
+      </div>
+            <div class="art-tile" data-title="Marathon Art 4" data-artist="Artist Name">
+        <img src="Marathon Art 4.png" alt="Art 9">
       </div>
     </div>
     <div class="load-more-wrap">
