--- a/stories.html
+++ b/stories.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Featured Fiction – Burnline</title>
+  <title>Featured Stories – Burnline</title>
 
   <!-- Fonts (match site) -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -177,7 +177,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-2.html" class="card-link story-card">
           <div class="card">
-            <img src="NM Art.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porttitor velit ac sapien blandit.</p>
             <div class="story-meta">by [Author's Name] • 7 min read</div>
@@ -219,7 +219,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-6.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="NM Art.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mattis risus nec magna pretium.</p>
             <div class="story-meta">by [Author's Name] • 6 min read</div>
