--- a/art.html
+++ b/art.html
@@ -237,8 +237,8 @@
       <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
         <img src="CBA5.jpg" alt="Art 2">
       </div>
-      <div class="art-tile" data-title="NM Art" data-artist="Artist Name">
-        <img src="NM Art.png" alt="Art 3">
+      <div class="art-tile" data-title="Marathon Art" data-artist="Artist Name">
+        <img src="Marathon Art.png" alt="Art 3">
       </div>
       <div class="art-tile" data-title="Marathon Art 2" data-artist="Artist Name">
         <img src="Marathon Art 2.png" alt="Art 5">
