--- a/stories.html
+++ b/stories.html
@@ -210,7 +210,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-5.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="AL Cover.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art 3.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vehicula sem in lorem suscipit.</p>
             <div class="story-meta">by [Author's Name] • 10 min read</div>
@@ -219,7 +219,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-6.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Marathon Art.png" alt="Story artwork" loading="lazy">
+            <img src="Marathon Art 4.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mattis risus nec magna pretium.</p>
             <div class="story-meta">by [Author's Name] • 6 min read</div>
