--- a/art.html
+++ b/art.html
@@ -231,8 +231,8 @@
       <h2 class="gradient-heading-blue">Issue Art</h2>
     </div>
     <div class="gallery-grid" id="issueArtGrid">
-      <div class="art-tile" data-title="CBA6" data-artist="Artist Name">
-        <img src="CBA6.jpg" alt="Art 1">
+      <div class="art-tile" data-title="Cyberpunk Girl" data-artist="Artist Name">
+        <img src="Cyberpunk Girl.jpg" alt="Art 1">
       </div>
       <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
         <img src="CBA5.jpg" alt="Art 2">
