--- a/art.html
+++ b/art.html
@@ -232,7 +232,7 @@
     </div>
     <div class="gallery-grid" id="issueArtGrid">
       <div class="art-tile" data-title="Cyberpunk Girl" data-artist="Artist Name">
-        <img src="Cyberpunk Girl.jpg" alt="Art 1">
+        <img src="Cyberpunk Girl.png" alt="Art 1">
       </div>
       <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
         <img src="CBA5.jpg" alt="Art 2">
