--- a/staffpicks.html
+++ b/staffpicks.html
@@ -506,7 +506,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Bruce Sterling’s Schismatrix Plus follows Abelard Lindsay, a rogue political manipulator navigating the power struggles between two factions of posthumanity: the Shapers, who embrace genetic modification, and the Mechanists, who embrace cybernetics. Across decades and shifting alliances, Lindsay witnesses humanity’s evolution beyond Earth, and beyond flesh.</p>
-      <p><strong>Why I like it:</strong> This one feels like it was Sterling’s grand vision of where cyberpunk could go given enough time. It’s dense and philosophical, sometimes a bit too much, but it pays off with sheer scope. Much of the genre is so grounded in that street-level crime way, but Schismatrix expands beyonmd that in a really cool wayo. Reading it is work, but the reward is getting to read one of the bolder expansions of the genre in this editor's eyes.</p>
+      <p><strong>Why I like it:</strong> This one feels like it was Sterling’s grand vision of where cyberpunk could go given enough time. It’s dense and philosophical, sometimes a bit too much, but it pays off with sheer scope. Much of the genre is so grounded in that street-level crime way, but Schismatrix expands beyonmd that in a really cool way. Reading it is work, but the reward is getting to read one of the bolder expansions of the genre in this editor's eyes.</p>
       <p><em>Please don't buy this from an online megaretailer. Instead, buy it from an independent bookstore with a good sci-fi section.</em></p>
     </div>
   </div>
