--- a/staffpicks.html
+++ b/staffpicks.html
@@ -330,7 +330,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Cloudpunk puts you in the role of Rania, a delivery driver working for a semi-legal courier service in a sprawling, vertical cyberpunk city. Over the course of a night, you ferry packages, meet eccentric residents, and slowly piece together the human and inhuman stories that fill the neon skyline.</p>
-      <p><strong>Why I like it:</strong> Sometimes a game doesn’t need fast combat or complex systems — sometimes it just needs atmosphere. Cloudpunk nails atmosphere. The voxel art shouldn’t work, but it’s beautiful; the writing shouldn’t matter in a delivery sim, but it does. Driving through the rain and neon while listening to strangers tell their stories captures a kind of quiet, lived-in cyberpunk that most games miss. It’s about the city as a character, and in Cloudpunk, the city is unforgettable.</p>
+      <p><strong>Why I like it:</strong> Sometimes a game doesn’t need complex systems, sometimes it just needs atmosphere. Cloudpunk nails atmosphere. The voxel art shouldn’t work as well as it does in the cyberpunk genre where tech is everything, but it’s beautiful; the writing shouldn’t matter in a delivery sim, but it's genuinely good. Driving through the rain and neon while listening to strangers tell their stories captures a kind of quiet, lived-in cyberpunk that most games miss.</p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/746850/Cloudpunk/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
