--- a/staffpicks.html
+++ b/staffpicks.html
@@ -362,7 +362,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Blood Dragon is a standalone expansion of Far Cry 3 that dials everything up to absurdity. You play Rex “Power” Colt, a cyborg soldier in a neon-drenched parody of ‘80s action films, fighting laser raptors, cyber-sharks, and a mad scientist villain.</p>
-      <p><strong>Why I like it:</strong> Blood Dragon is ridiculous, self-aware, and an absolute blast. It’s not “serious” cyberpunk, but it’s dripping in neon, synths, and tongue-in-cheek homage. For every clunky line of dialogue, there’s a moment where you fight a giant monster while Michael Biehn growls one-liners in your ear. Sometimes the best way to celebrate cyberpunk is to laugh at it, and Blood Dragon gets that balance right.</p>
+      <p><strong>Why I like it:</strong> Blood Dragon is ridiculous, self-aware, and an absolute blast. It’s not “serious” cyberpunk, but it’s dripping in neon, synths, and tongue-in-cheek homage. For every clunky line of dialogue, there’s a moment where you fight a giant monster while Michael Biehn growls one-liners in your ear. Plus, it has that excellent chain kill mechanic from the first game where you sneak-melee kill three guys and then throw a knife at a fourth. Far Cry is bad now, but was once great.</p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/233270/Far_Cry_3_Blood_Dragon/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
