--- a/staffpicks.html
+++ b/staffpicks.html
@@ -391,8 +391,8 @@
   <small>Rare</small>
   <div class="card-overlay">
     <div class="overlay-content">
-      <p>This remaster of the original N64 classic follows Joanna Dark, a secret agent caught in a conspiracy involving corporations, aliens, and cutting-edge weapons. A spiritual successor to GoldenEye 007 (yes, that's real), Perfect Dark was the sci-fi twist on early first-person shooters.</p>
-      <p><strong>Why I like it:</strong> That's right, I'm nostalgic! Perfect Dark (the 2010 remake for Xbox 360) is ridiculous and awesome. It's so plot thin and stupid, just as it should be. What a moment in time.</p>
+      <p>This remaster of the original N64 classic follows Joanna Dark, a secret agent caught in a conspiracy involving corporations, aliens, and cutting-edge weapons.</p>
+      <p><strong>Why I like it:</strong> A spiritual successor to GoldenEye 007 (yes, that's real), Perfect Dark was the sci-fi twist on early first-person shooters. That's right, this editor's nostalgic! Perfect Dark (the 2010 remake for Xbox 360) is ridiculous and awesome. It's so plot thin and stupid, just as it should be. What a moment in time.</p>
       <p class="steam-link">
         <a href="https://www.xbox.com/en-US/games/store/perfect-dark/C0SWGV4560W1/0001" target="_blank" rel="noopener noreferrer">Check it out here.</a>
       </p>
