--- a/staffpicks.html
+++ b/staffpicks.html
@@ -407,7 +407,7 @@
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Ruiner is a fast-paced twin-stick shooter where you play as a helmeted antihero on a mission to rescue his kidnapped brother. The gameplay is a mix of fast-paced melee and gun combat, all wrapped in a pounding synth soundtrack and blood-red visuals.</p>
-      <p><strong>Why I like it:</strong> Ruiner is grim cyberpunk turned up as hish as the dial goes. The story is minimal, the characters are archetypal, but the vibe is fits perfectly within the genre, just with more red than neon. It’s the kind of game you play less for the plot and more for the feeling of being a killing machine. Super well made game.</p>
+      <p><strong>Why I like it:</strong> Ruiner is grim cyberpunk turned up as high as the dial goes. The story is minimal, the characters are archetypal, but the vibe is fits perfectly within the genre, just with more red than neon. It’s the kind of game you play less for the plot and more for the feeling of being a killing machine. Super well made game.</p>
       <p class="steam-link">
         <a href="https://store.steampowered.com/app/464060/RUINER/" target="_blank" rel="noopener noreferrer">Check it out on Steam.</a>
       </p>
