--- a/staffpicks.html
+++ b/staffpicks.html
@@ -610,7 +610,8 @@
     <div class="overlay-content">
       <p>This photography book captures Tokyo at night, transforming real streets into scenes that look like they belong in a cyberpunk movie. Through color, framing, and timing, Wong finds crazy beauty in the city at night.</p>
       <p><strong>Why I like it:</strong> Liam Wong, who was a successful video game designer and art director before he began professional photography, left no room for doubt after publishing this book: the dude knows how to make stuff look good. I can't say anything to better convince you to check this book of photography than you could see for yourself, so you should see it for yourself. This one sits on my desk and I open it about once a week.</p>
-            <a href="https://www.liamwong.com/book" target="_blank" rel="noopener noreferrer">Check it out on the artist's website.</a>
+                  <p class="steam-link">     
+      <a href="https://www.liamwong.com/book" target="_blank" rel="noopener noreferrer">Check it out on the artist's website.</a>
 
     </div>
   </div>
