--- a/staffpicks.html
+++ b/staffpicks.html
@@ -590,8 +590,8 @@
       <!-- Other -->
 <div class="story-card" data-category="other" tabindex="0" aria-label="Open details for Neon_Rising">
   <img src="Neon Rising.png" alt="">
-  <h3>Neon_Rising</h3>
-  <small>The_Future_is_Now</small>
+  <h3>The_Future_Is_Now / Neon_Rising</h3>
+  <small>Deathburger</small>
   <div class="card-overlay">
     <div class="overlay-content">
       <p>Neon_Rising is a cyberpunk art book that mixes narrative with wordless visuals. The art alone tells stories, but there’s just enough lore to make the world feel alive.</p>
