--- a/submit.html
+++ b/submit.html
@@ -207,7 +207,7 @@
           <tr>
             <td>How to Submit</td>
 <td>Email <a href="mailto:contact@burnlinemag.com">contact@burnlinemag.com</a>
-  with a link to your artwork wherever it's hosted (online portfolio, Reddit post, etc.).
+  with a link to your artwork wherever it's hosted (ArtStation portfolio, Reddit post, etc.).
   Please include the word <strong>"Submission"</strong> in the subject line.
 </td>
           </tr>
