--- a/stories/story-8.html
+++ b/stories/story-8.html
@@ -151,7 +151,7 @@
       </div>
 
       <figure class="story-figure">
-        <img src="../Cyberpunk Guy.png" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
+        <img src="../Marathon Art 4.png" alt="[Describe the illustration briefly]" loading="lazy" decoding="async" />
         <figcaption>Illustration by [Illustrator Name].</figcaption>
       </figure>
     </div>
