--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <div class="grid-inner">
         <a href="issues.html" class="card-link">
           <div class="card">
-            <img src="Ruiner Cover.jpg" alt="Featured Stories image">
+            <img src="Cover Mockup 2.png" alt="Featured Stories image">
             <h3>Issue Library</h3>
           </div>
         </a>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
