--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
   <section class="hero">
     <div class="hero-inner wrap">
       <a href="#latest-issue" onclick="openFlipbook(event)">
-        <img src="Cover Mockup 2.png" alt="Latest issue cover" />
+        <img src="Frame 7.png" alt="Latest issue cover" />
       </a>
 
       <div class="hero-text" style="flex: 1; max-width: 700px; display: flex; flex-direction: column;">
@@ -270,7 +270,7 @@
       <div class="grid-inner">
         <a href="issues.html" class="card-link">
           <div class="card">
-            <img src="Cover Mockup 2.png" alt="Featured Stories image">
+            <img src="Frame 7.png" alt="Featured Stories image">
             <h3>Issue Library</h3>
           </div>
         </a>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
