--- a/staffpicks.html
+++ b/staffpicks.html
@@ -280,15 +280,15 @@
     <!-- Tabs -->
     <div class="tabs">
       <div class="tablist" role="tablist" aria-label="Filter Staff Picks">
-        <button class="tab" id="tab-books" role="tab" aria-selected="true" aria-controls="panel-grid" data-filter="books">Books</button>
         <button class="tab" id="tab-games" role="tab" aria-selected="false" aria-controls="panel-grid" data-filter="games">Games</button>
+        <button class="tab" id="tab-books" role="tab" aria-selected="true" aria-controls="panel-grid" data-filter="books">Books</button>
         <button class="tab" id="tab-film"  role="tab" aria-selected="false" aria-controls="panel-grid" data-filter="film">Film / TV</button>
         <button class="tab" id="tab-other" role="tab" aria-selected="false" aria-controls="panel-grid" data-filter="other">Other</button>
       </div>
     </div>
 
     <!-- Single panel showing grid; filtering switches visible cards -->
-    <div id="panel-grid" class="story-grid" role="tabpanel" tabindex="0" aria-labelledby="tab-books">
+    <div id="panel-grid" class="story-grid" role="tabpanel" tabindex="0" aria-labelledby="tab-games">
 <!-- Games -->
 <div class="story-card" data-category="games" tabindex="0" aria-label="Open details for 1000xRESIST">
   <img src="1000xResist.png" alt="">
