--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
   <!-- Latest issue (capped with .wrap) -->
   <section id="latest-issue" class="wrap">
-    <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
+  <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 400px;" src="https://heyzine.com/flip-book/f23a012d4f.html"></iframe>
 <p style="margin-top: 1rem;">
   <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank">Open in Fullscreen</a>
 </p>
@@ -380,6 +380,7 @@
 </script>
 </body>
 </html>
+
 
 
 
