--- a/issues.html
+++ b/issues.html
@@ -168,7 +168,7 @@
 
     <!-- Flipbook for Issue 001 -->
     <section id="flip-001" class="flipbook-section">
-      <iframe allowfullscreen allow="clipboard-write" scrolling="no" class="fp-iframe" src="https://heyzine.com/flip-book/6c786ba517.html"></iframe>
+      <iframe allowfullscreen="" allow="clipboard-write" scrolling="no" class="fp-iframe" style="border: 1px solid lightgray; width: 100%; height: 400px;" src="https://heyzine.com/flip-book/f23a012d4f.html"></iframe>
       <p style="margin-top: 1rem;">
         <a href="https://heyzine.com/flip-book/6c786ba517.html" target="_blank" rel="noopener">Open in Fullscreen</a>
       </p>
