--- a/art.html
+++ b/art.html
@@ -219,7 +219,7 @@
       <h2 class="gradient-heading-blue" style="text-align:left;">Cover Gallery</h2>
       <div class="cover-grid">
         <div class="cover-tile" data-title="Burnline — Issue 01" data-artist="Burnline Editorial">
-          <img src="Frame 13.png" alt="Burnline Issue 01 cover">
+          <img src="New Cover.png" alt="Burnline Issue 01 cover">
         </div>
       </div>
     </div>
@@ -232,22 +232,22 @@
     </div>
     <div class="gallery-grid" id="issueArtGrid">
       <div class="art-tile" data-title="Cyberpunk Girl" data-artist="Artist Name">
-        <img src="Cyberpunk Girl.png" alt="Art 1">
+        <img src="Placeholder 1.png" alt="Art 1">
       </div>
       <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
-        <img src="CBA5.jpg" alt="Art 2">
+        <img src="Placeholder 2.png" alt="Art 2">
       </div>
       <div class="art-tile" data-title="Marathon Art" data-artist="Artist Name">
-        <img src="Marathon Art.png" alt="Art 3">
+        <img src="Placeholder 3.png" alt="Art 3">
       </div>
       <div class="art-tile" data-title="Marathon Art 2" data-artist="Artist Name">
-        <img src="Marathon Art 2.png" alt="Art 5">
+        <img src="Placeholder 1.png" alt="Art 5">
       </div>
       <div class="art-tile" data-title="Marathon Art 3" data-artist="Artist Name">
-        <img src="Marathon Art 3.png" alt="Art 8">
+        <img src="Placeholder 2.png" alt="Art 8">
       </div>
             <div class="art-tile" data-title="Marathon Art 4" data-artist="Artist Name">
-        <img src="Marathon Art 4.png" alt="Art 9">
+        <img src="Placeholder 3.png" alt="Art 9">
       </div>
     </div>
     <div class="load-more-wrap">
