--- a/art.html
+++ b/art.html
@@ -231,22 +231,22 @@
       <h2 class="gradient-heading-blue">Issue Art</h2>
     </div>
     <div class="gallery-grid" id="issueArtGrid">
-      <div class="art-tile" data-title="Cyberpunk Girl" data-artist="Artist Name">
+      <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 1.png" alt="Art 1">
       </div>
-      <div class="art-tile" data-title="CBA5" data-artist="Artist Name">
+      <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 2.png" alt="Art 2">
       </div>
-      <div class="art-tile" data-title="Marathon Art" data-artist="Artist Name">
+      <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 3.png" alt="Art 3">
       </div>
-      <div class="art-tile" data-title="Marathon Art 2" data-artist="Artist Name">
+      <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 1.png" alt="Art 5">
       </div>
-      <div class="art-tile" data-title="Marathon Art 3" data-artist="Artist Name">
+      <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 2.png" alt="Art 8">
       </div>
-            <div class="art-tile" data-title="Marathon Art 4" data-artist="Artist Name">
+            <div class="art-tile" data-title="Placeholder Image" data-artist="Artist Name">
         <img src="Placeholder 3.png" alt="Art 9">
       </div>
     </div>
