--- a/stories.html
+++ b/stories.html
@@ -168,7 +168,7 @@
         <!-- First row: 3 visible cards -->
         <a href="https://bowliopia.github.io/burnline/stories/story-1.html" class="card-link story-card">
           <div class="card">
-            <img src="AL Cover.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 1.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis a augue nec lorem viverra varius.</p>
             <div class="story-meta">by [Author's Name] • 9 min read</div>
@@ -177,7 +177,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-2.html" class="card-link story-card">
           <div class="card">
-            <img src="Marathon Art.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 2.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus porttitor velit ac sapien blandit.</p>
             <div class="story-meta">by [Author's Name] • 7 min read</div>
@@ -186,7 +186,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-3.html" class="card-link story-card">
           <div class="card">
-            <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 3.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sodales leo nec erat elementum.</p>
             <div class="story-meta">by [Author's Name] • 11 min read</div>
@@ -201,7 +201,7 @@
         <!-- Everything from the 4th card onward starts hidden -->
         <a href="https://bowliopia.github.io/burnline/stories/story-4.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Marathon Art 2.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 1.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed facilisis tortor non justo ultricies.</p>
             <div class="story-meta">by [Author's Name] • 8 min read</div>
@@ -210,7 +210,7 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-5.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Marathon Art 3.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 2.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vehicula sem in lorem suscipit.</p>
             <div class="story-meta">by [Author's Name] • 10 min read</div>
@@ -219,28 +219,10 @@
 
         <a href="https://bowliopia.github.io/burnline/stories/story-6.html" class="card-link story-card is-hidden">
           <div class="card">
-            <img src="Marathon Art 4.png" alt="Story artwork" loading="lazy">
+            <img src="Placeholder 3.png" alt="Story artwork" loading="lazy">
             <h3>[Story Title]</h3>
             <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer mattis risus nec magna pretium.</p>
             <div class="story-meta">by [Author's Name] • 6 min read</div>
-          </div>
-        </a>
-
-        <a href="https://bowliopia.github.io/burnline/stories/story-7.html" class="card-link story-card is-hidden">
-          <div class="card">
-            <img src="Cyberpunk Girl.png" alt="Story artwork" loading="lazy">
-            <h3>[Story Title]</h3>
-            <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec sapien quis justo congue.</p>
-            <div class="story-meta">by [Author's Name] • 9 min read</div>
-          </div>
-        </a>
-
-        <a href="https://bowliopia.github.io/burnline/stories/story-8.html" class="card-link story-card is-hidden">
-          <div class="card">
-            <img src="Marathon Art 2.png" alt="Story artwork" loading="lazy">
-            <h3>[Story Title]</h3>
-            <p class="story-excerpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur a mi sit amet mi dapibus.</p>
-            <div class="story-meta">by [Author's Name] • 12 min read</div>
           </div>
         </a>
 
