--- a/index.html
+++ b/index.html
@@ -250,7 +250,14 @@
 
         <div class="button-row" style="width: 100%; margin-top: 2.5rem;">
           <button id="toggle-flipbook" class="btn">Read This Issue</button>
-          <a class="btn secondary" href="Burnline-Issue-01.pdf" download="Burnline-Issue-01.pdf">Download PDF</a>
+<a
+  href="Placeholder Mag.pdf"
+  download
+  class="btn subscribe-btn"
+>
+  Download PDF
+</a>
+
         </div>
       </div>
     </div>
@@ -380,6 +387,7 @@
 </script>
 </body>
 </html>
+
 
 
 
