--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
         <div class="button-row" style="width: 100%; margin-top: 2.5rem;">
           <a href="https://heyzine.com/flip-book/f23a012d4f.html" target="_blank" rel="noopener" class="btn">Read This Issue</a>
-          <a href="Placeholder Mag.pdf" download class="btn subscribe-btn">Download PDF</a>
+          <a href="Placeholder Mag.pdf" download class="btn secondary">Download PDF</a>
         </div>
       </div>
     </div>
@@ -331,3 +331,4 @@
 </script>
 </body>
 </html>
+
