--- a/issues.html
+++ b/issues.html
@@ -160,8 +160,8 @@
           </div>
         </div>
         <div class="cta">
-          <a class="btn toggle-flipbook js-open-flipbook" href="#flip-001" data-target="flip-001">Read Issue</a>
-          <a class="btn secondary" href="Burnline-Issue-01.pdf" download="Burnline-Issue-01.pdf">Download PDF</a>
+          <a href="https://heyzine.com/flip-book/f23a012d4f.html" target="_blank" rel="noopener" class="btn">Read This Issue</a>
+          <a href="Placeholder Mag.pdf" download class="btn secondary">Download PDF</a>
         </div>
       </div>
     </section>
