--- a/issues.html
+++ b/issues.html
@@ -159,7 +159,7 @@
             </ul>
           </div>
         </div>
-        <div class="cta">
+        <div class="button-row" style="width: 100%; margin-top: 2.5rem;">
           <a href="https://heyzine.com/flip-book/f23a012d4f.html" target="_blank" rel="noopener" class="btn">Read This Issue</a>
           <a href="Placeholder Mag.pdf" download class="btn secondary">Download PDF</a>
         </div>
