--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
       <div class="grid-inner">
         <a href="issues.html" class="card-link">
           <div class="card">
-            <img src="Frame 13.png" alt="Featured Stories image">
+            <img src="Frame 21.png" alt="Featured Stories image">
             <h3>Issue Library</h3>
           </div>
         </a>
         <a href="stories.html" class="card-link">
           <div class="card">
-            <img src="AL Cover.png" alt="Poll image">
+            <img src="Frame 22.png" alt="Poll image">
             <h3>Featured Stories</h3>
           </div>
         </a>
         <a href="staffpicks.html" class="card-link">
           <div class="card">
-            <img src="1000xResist-Key-Art.jpg" alt="Staff Picks image">
+            <img src="Frame 23.png" alt="Staff Picks image">
             <h3>Staff Picks</h3>
           </div>
         </a>
@@ -331,4 +331,5 @@
 </script>
 </body>
 </html>
+
 
